# ai-shortlist-screener

./: .editorconfig  .env.example  .gitattributes  .gitignore  COMMIT_MESSAGE.md  README.md  TODO.md  asr_report_test.csv  conversation_reconstructed_2025-10-27_220031.txt  debug_elgiganten.py  discovery_log.txt  output.json  pyproject.toml  test_elgiganten.py  urls.txt
.github/workflows/: ci.yml
data/: audit_results.csv  distribution.csv  intent_categories.csv  lar_scores.csv  lar_scores_attribution.csv  multibrand_retailer_peers.csv  peer_categories.csv  peers.csv  service.csv  soa_log.csv  test_known_rating.txt  test_urls.txt
data/intents/: intents_peer_core_sv.csv  test_intents.csv  test_intents_small.csv
docs/: CHANGELOG.md  QUICK_REFERENCE.md  architecture.md  architecture.md.backup  category_weighting.md  centered_s_scoring.md  confidence_weighting.md  discovery_comparison.md  lar_variables.md  methodology.md  pitch.md  playwright_discovery.md  scoring.md  sitemap_discovery.md  updates.md  url_discovery.md  validation.md
scripts/: README_extract_jsonld_playwright.md  analyze_rating_trends.py  csv_to_urls.py  extract_jsonld_playwright.py  investigate_js_ratings.py  monitor_ratings_sample.py  test_playwright_discovery.py  visualize_attribution.py
src/asr/: audit.py  cli.py  config.py  discover.py  fetch.py  js_fallback.py  js_fallback.py.backup  lar.py  parse.py  rating_monitor.py  site_search.py  site_search_playwright.py  sitemap_search.py
