
[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "asr-screener"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27",
    "brotli>=1.1",
    "beautifulsoup4>=4.12",
    "lxml>=5.1",
    "extruct>=0.16",
    "pandas>=2.2",
    "numpy>=1.26",
    "typer[all]>=0.12",
    "rich>=13.7",
    "pydantic>=2.8",
    "tqdm>=4.66",
    "pyyaml>=6.0.1",
    "tenacity>=9.0",
    "playwright>=1.40",
]

[project.scripts]
asr = "asr.cli:app"
